--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -151,6 +151,7 @@ dvips,%
     \draw (Pcx) -- +(0,\AxesLengthZ);
     \draw (Pcy) -- +(\AxesLength,0);
     \draw (Oc) -- (Pc);
+    \draw (N) -- (P1);
     \draw [<->, thick] (\Radius,\Nz) -- +(0,\ArmLength);
     \draw [<->, thick] (Oc) -- +(-\ArmLength,0);
     % \fill (\Rho,\Nz) circle (2pt);
@@ -170,6 +171,7 @@ dvips,%
   \draw (N1) node[anchor=north] {$N_1$};
   \draw (A1) node[anchor=south west] {$A_1$};
   \draw (P1) node[anchor=south west] {$P_1$};
+  \draw (Oc) node[anchor=south west] {$\tilde{P_1}$};
   \fill [red] (N) circle (2pt);
   \fill [red] (N1) circle (2pt);
   \fill [red] (A1) circle (2pt);
